<resources>
    <string name="app_name">OpenEvents</string>
    <string name="openevents_2_0">OpenEvents 2.0</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="sign_up_register">Sign up</string>
    <string name="first_name_placeholder">Your First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name_placeholder">Your Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_picture_placeholder">img.jpg</string>
    <string name="create_account">Create account</string>
    <string name="events">Events</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="preference_file_key">shared_preferences</string>
    <string name="access_token">access_token</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="explore_events">Explore</string>
    <string name="my_events">My Events</string>
    <string name="search_users">Search Users</string>
    <string name="plus_sign">+</string>
    <string name="create_event">Create Event</string>
    <string name="profile">My Profile</string>
    <string name="select">Select</string>
    <string name="title">Title</string>
    <string name="your_title">Your title</string>
    <string name="description">Description</string>
    <string name="your_description">Your description</string>
    <string name="location">Location</string>
    <string name="your_location">Your Location</string>
    <string name="category">Category</string>
    <string name="participants">Participants</string>
    <string name="start_date">Start date: </string>
    <string name="starttime">Start: </string>
    <string name="start_date_of_event">Start date of event</string>
    <string name="end_date">End date</string>
    <string name="end">End: </string>
    <string name="end_date_of_event">End date of event</string>
    <string name="name_of_event">Name of Event</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="apply_changes">Apply changes</string>
    <string name="user_name">User name</string>
    <string name="place">Place</string>
    <string name="date_time">Date and Time</string>
    <string name="event_image">Image of the event</string>
    <string name="event_description">Description of the event</string>
    <string name="edit_user_profile">Edit user profile</string>
    <string name="edit_user_profile_button">Edit user profile button</string>
    <string name="logout_button">Logout button</string>
    <string name="logout">Logout</string>
    <string name="_0">0%</string>
    <string name="percentage_of_comments">Percentage of comments:</string>
    <string name="_0p">0</string>
    <string name="number_of_comments">Number of comments:</string>
    <string name="average_score">Average Score:</string>
    <string name="statistics">Statistics:</string>
    <string name="cardenas">Cardenas</string>
    <string name="james">James</string>
    <string name="attend">Attend</string>
    <string name="unattend">Unattend</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="education">Education</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="concerts">Concerts</string>
    <string name="clear_all_filters">Clear</string>
</resources>