<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="35dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_register"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ll_form_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/tv_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_email"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_register_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name_placeholder"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_register_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name_placeholder"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_password"
            android:textSize="15sp"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/tv_register_password_conf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_password_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_password"
            android:textSize="15sp"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/tv_register_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/profile_picture_placeholder"
            android:textSize="15sp" />
        <Button
            android:id="@+id/bt_register_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/create_account"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>