<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_main_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/openevents_2_0"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ll_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_email"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_password"
            android:textSize="15sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/ll_login_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_question_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>