<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/event_image"
        app:srcCompat="@drawable/event_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/name_of_event"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_of_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_description"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/starttime"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/end"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/location_of_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/attend_to_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/attend"
        android:text="@string/attend"
        android:gravity="center"
        app:icon="@drawable/ic_baseline_verified_user_24"
        app:iconGravity="textStart"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:backgroundTint="@color/primary"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/edit_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/edit_event"
        android:text="@string/edit_event"
        android:gravity="center"
        app:icon="@drawable/ic_baseline_edit_24"
        app:iconGravity="textStart"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:backgroundTint="@color/orange"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/delete_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/delete_event"
        android:text="@string/delete_event"
        android:gravity="center"
        app:icon="@drawable/ic_baseline_delete_24"
        app:iconGravity="textStart"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:backgroundTint="@color/logout"/>
</LinearLayout>