<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
app:cardBackgroundColor="@color/white"
app:cardCornerRadius="8dp"
app:cardElevation="8dp"
app:cardMaxElevation="10dp"
app:cardPreventCornerOverlap="true"
app:cardUseCompatPadding="false">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/event_card_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/event_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/event_card_image"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/event_card_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@id/event_card_image"
        android:text="@string/date_time"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/event_card_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@id/event_card_image"
        android:text="@string/place"
        android:textColor="@color/black"
        android:textSize="16sp" />
</RelativeLayout>
</androidx.cardview.widget.CardView>